--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
 	"appid": "wxfee681a382d5f7dc",
-	"projectname": "badminon",
+	"projectname": "badminton",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
