--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "badminton",
+  "name": "e_wepy",
   "version": "0.0.1",
   "description": "A WePY project",
   "main": "dist/app.js",
@@ -14,16 +14,16 @@
     "module-a": false,
     "./src/components/list": "./src/components/wepy-list.wpy"
   },
-  "author": "Jassica <1648511816@qq.com>",
+  "author": "Amypher <1648511816@qq.com>",
   "license": "MIT",
   "dependencies": {
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
-    "wepy": "^1.7.1",
+    "wepy-redux": "^1.5.3",
+    "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
-    "wepy-com-toast": "^1.0.2",
-    "wepy-redux": "^1.5.3"
+    "wepy-com-toast": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
@@ -33,8 +33,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
+    "eslint": "^3.18.0",
+    "eslint-config-standard": "^7.1.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "wepy-eslint": "^1.5.3",
     "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10",
-    "wepy-plugin-uglifyjs": "^1.3.7"
+    "wepy-compiler-less": "^1.3.10"
   }
 }
